# napari-hub-cli

./: .gitignore  .pre-commit-config.yaml  .travis.yml  CHANGELOG.md  CONTRIBUTING.rst  HISTORY.rst  LICENSE  MANIFEST.in  Makefile  README.md  codecov.yml  pyproject.toml  requirements_dev.txt  setup.cfg  setup.py  tox.ini
.github/: ISSUE_TEMPLATE.md  test_and_deploy.yml
docs/: Makefile  conf.py  index.rst  installation.rst  make.bat  usage.rst
examples/: analyze_plugin_quality_in_batches.py  check_errored_plugins.py  reproduce_issues.py
napari_hub_cli/: __init__.py  autofix.py  citation.py  cli.py  cli2.py  constants.py  filesaccess.py  formatting.py  meta_classes.py  napari_hub_cli.py  utils.py
tests/: __init__.py  config_enum.py  conftest.py  test_additional_info.py  test_autofix.py  test_checklist.py  test_codequality_checklist_repo2.py  test_conda_infos.py  (+13 more)
tests/resources/: README.md  README2.md  complete_setup2.cfg  license.json  pyproject.toml  pyproject2.toml  pyproject3.toml  setup.cfg  setup.py  setup2.cfg  setup2.py  setup3.cfg  setup3.py
tests/resources/.napari/: config.yml
tests/resources/CZI-29-faulty/: CITATION.cff  README.md  pyproject.toml  setup.cfg  setup.py
tests/resources/CZI-29-faulty/.github/workflows/: config_random.yml
tests/resources/CZI-29-faulty/.napari/: config.yml
tests/resources/CZI-29-small/: setup.cfg
tests/resources/CZI-29-small/.github/workflows/: test_main.yml
tests/resources/CZI-29-test/: README.md  main.py  setup.cfg  setup.py
tests/resources/CZI-29-test/.napari-hub/: config.yml
tests/resources/CZI-29-test/plugin_napari/: napari.yaml
tests/resources/CZI-29-test2/: README.md  pyproject.toml  requirements.txt  setup.py
tests/resources/CZI-29-test2/.napari/: DESCRIPTION.md  config.yml
tests/resources/CZI-29-test3/subproj1-hatch-src/: pyproject.toml
tests/resources/CZI-29-test3/subproj2-hatch-nosrc/: pyproject.toml
tests/resources/CZI-29-test3/subproj2-hatch-nosrc/napari_plugin/: napari.yaml
tests/resources/autofix_repo2/.napari/: config.yml
tests/resources/citations/: citation1.md  example.md  example_doi_only.md  example_empty.md
tests/resources/conda-infos1/: setup.cfg
tests/resources/conda-infos1/.github/workflows/: test.yml
tests/resources/conda-infos2/: setup.cfg
tests/resources/conda-infos2/.github/workflows/: test_and_deploy.yml
tests/resources/conda-infos3/: setup.cfg
tests/resources/conda-infos4/: setup.cfg
tests/resources/licenses/repo_example1/: LICENSE
tests/resources/python/: f1.py  f2.py
tests/resources/python/subdir/: f1.py
tests/resources/test_plugin_name/: __init__.py
(+74 files in other folders)
