[metadata]
name = napari-hub-cli
author = CZI Imaging
author_email = team@napari.dev
license = MIT
license_file = LICENSE

url = https://github.com/chanzuckerberg/napari-hub-cli
description= Command line utilities for inspecting and validating plugins for the napari hub
long_description = file: README.md
long_description_content_type = text/markdown
classifiers =
    Development Status :: 2 - Pre-Alpha
    Intended Audience :: Developers
    License :: OSI Approved :: BSD License
    Natural Language :: English
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3.6
    Programming Language :: Python :: 3.7
    Programming Language :: Python :: 3.8
    Programming Language :: Python :: 3.9
    Programming Language :: Python :: 3.10

[options]
packages = find:
python_requires = >=3.6
setup_requires =
    setuptools_scm
install_requires =
    PyYAML
    requests
include_package_data=True

[options.entry_points]
console_scripts =
    napari-hub-cli = napari_hub_cli.cli:main

[flake8]
exclude = docs

[tool:pytest]
collect_ignore = ['setup.py']
