[project]
name = "myproject"
display_name = "myproject"
readme = "README.md"
classifiers = [
    "Development Status :: 4 - Beta",
    "Framework :: napari",
    "Topic :: Scientific/Engineering :: Image Recognition",
    "Intended Audience :: Developers",
    "Intended Audience :: Science/Research",
    "Programming Language :: Python",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Operating System :: OS Independent",
    ]
dependencies = [
    "numpy",
    "cython"
]

[tool.poetry.scripts]
mikro-napari = "mikro_napari.run:main"

[tool.poetry.dev-dependencies]
pytest = "^6.2.5"
pytest-aiohttp = "^0.3.0"
pytest-cov = "^3.0.0"
black = "^21.12b0"
napari = "^0.4.16"
PyQt5 = "^5.15.6"
testcontainers = "^3.5.3"

[project.entry-points."napari.manifest"]
myproject = "mod1:napari.yaml"