[metadata]
name = btrack
version = 0.0.8
author_email = lennart.kowitz@isas.de
url = https://github.com/MMV-Lab/vessel-express-napari
license = BSD-3-Clause
long_description = file: README.md
long_description_content_type = text/markdown
project_urls =
	Documentation = https://github.com/MMV-Lab/vessel-express-napari#README.md

[options.entry_points]
napari.manifest =
	plugin-napari = plugin_napari:napari.yaml


